@@ -2,7 +2,7 @@ sg3-utils (1.48-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 17 Feb 2022 23:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 22 Feb 2022 19:00:00 -0500
 
 sg3-utils (1.47-0.1) unstable; urgency=low
 
